--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-bookmark-landing-page",
+  "name": "bookmark-landing-page",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
