--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "@iconify-json/fa6-solid": "^1.2.4",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.14"
+    "prettier-plugin-tailwindcss": "0.7.0"
   }
 }
