--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,4 @@
 {
-  "recommendations": [
-    "astro-build.astro-vscode",
-    "esbenp.prettier-vscode",
-    "bradlc.vscode-tailwindcss"
-  ],
+  "recommendations": ["astro-build.astro-vscode", "esbenp.prettier-vscode", "bradlc.vscode-tailwindcss"],
   "unwantedRecommendations": []
 }
