--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bookmark-landing-page",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "scripts": {
     "dev": "astro dev --open",
     "build": "astro build",
